@@ -54,9 +54,10 @@ install-libtool-import-lib:
 #	directive in .def files.)
 #
 	for entry in `grep PRIVATE gobject.def | sed -e 's/PRIVATE//'`; do \
-	  file=`nm -A .libs/libgobject-2.0.dll.a | grep -m 1 $$entry | cut -d: -f2`; \
+	  file=`$(NM) -A .libs/libgobject-2.0.dll.a | grep -m 1 $$entry | cut -d: -f2`; \
 	  ar d .libs/libgobject-2.0.dll.a $$file; \
 	done
+	$(RANLIB) .libs/libgobject-2.0.dll.a
 	$(INSTALL) .libs/libgobject-2.0.dll.a $(DESTDIR)$(libdir)
 	$(INSTALL) gobject.def $(DESTDIR)$(libdir)/gobject-2.0.def
 
